<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.iessaladillo.alejandro.finalsocialgameproyect.ui.login.LoginFragment"
        android:label="@string/loginFragment_title" >
        <action
            android:id="@+id/actionLoginToSignin"
            app:destination="@id/signInFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/actionLoginToChat"
            app:destination="@id/chatFragment" />
    </fragment>
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.iessaladillo.alejandro.finalsocialgameproyect.ui.signUp.SignUpFragment"
        android:label="@string/signInFragment_title" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.iessaladillo.alejandro.finalsocialgameproyect.ui.Chat.ChatFragment"
        android:label="@string/chatFragment_title"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/postFragment"
        android:name="com.iessaladillo.alejandro.finalsocialgameproyect.ui.Post.PostFragment"
        android:label="@string/postFragment_title"
        tools:layout="@layout/fragment_post" />
</navigation>