<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRootSignIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtSignupUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_signup_txtSignupUser"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/txtSignupEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtSignupEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txtInput_hint_email"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtSignupPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txtInput_hint_password"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSignupEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:text="@string/fragment_signup_btnSignUp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSignupPassword" />

        <TextView
            android:id="@+id/lblReturnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/fragment_signup_lblReturnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>